--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@ header-img: "img/post-bg-rwd.jpg"
     <blockquote><p>冰冻三尺 非一日之寒<br>
     积土成山 非斯须之作</p></blockquote>
 
-    <p>Hey，我是<strong>飞飞(BY)</strong>，人工智能爱好者，在天津读书。</p>
+    <p>Hey，我是<strong>飞飞(ASHORE)</strong>，人工智能爱好者，在天津读书。</p>
 
     <p>学习之余，我还是一个运动爱好者，同时也非常喜欢干饭。</p>
 
